task3/deployment-web-emptydir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-emptydir
  name: web-emptydir
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-emptydir
  template:
    metadata:
      labels:
        app: web-emptydir
    spec:
      containers:
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
          - name: cache
            mountPath: /cache
      volumes:
        - name: cache
          emptyDir: {}
